RESOLVED FIXED143257
Swipes occur in the wrong direction in RTL
https://bugs.webkit.org/show_bug.cgi?id=143257
Summary Swipes occur in the wrong direction in RTL
Tim Horton
Reported 2015-03-31 01:46:07 PDT
Swipes occur in the wrong direction in RTL
Attachments
Patch (11.11 KB, patch)
2015-03-31 01:46 PDT, Tim Horton
no flags
use newer API (12.12 KB, patch)
2015-03-31 16:33 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2015-03-31 01:46:24 PDT
mitz
Comment 2 2015-03-31 07:10:20 PDT
Tim Horton
Comment 3 2015-03-31 16:33:31 PDT
Created attachment 249867 [details] use newer API
Tim Horton
Comment 4 2015-03-31 16:39:52 PDT
Note You need to log in before you can comment on or make changes to this bug.