Source/WebKit2/UIProcess/ios/ViewGestureControllerIOS.mm
@@ -60,6 +60,7 @@ using namespace WebCore;
     WebKit::ViewGestureController *_gestureController;
     RetainPtr<_UINavigationInteractiveTransitionBase> _backTransitionController;
     RetainPtr<_UINavigationInteractiveTransitionBase> _forwardTransitionController;
+    WebKit::WeakObjCPtr<UIView> _gestureRecognizerView;
 }
 
 static const float swipeSnapshotRemovalRenderTreeSizeTargetFraction = 0.5;
@@ -78,6 +79,7 @@ static HashMap<uint64_t, WebKit::ViewGestureController*>& viewGestureControllers
     self = [super init];
     if (self) {
         _gestureController = gestureController;
+        _gestureRecognizerView = gestureRecognizerView;
 
         _backTransitionController = adoptNS([_UINavigationInteractiveTransitionBase alloc]);
         _backTransitionController = [_backTransitionController initWithGestureRecognizerView:gestureRecognizerView animator:nil delegate:self];
@@ -96,7 +98,7 @@ static HashMap<uint64_t, WebKit::ViewGestureController*>& viewGestureControllers
 
 - (WebKit::ViewGestureController::SwipeDirection)directionForTransition:(_UINavigationInteractiveTransitionBase *)transition
 {
-    return transition == _backTransitionController ? WebKit::ViewGestureController::SwipeDirection::Left : WebKit::ViewGestureController::SwipeDirection::Right;
+    return transition == _backTransitionController ? WebKit::ViewGestureController::SwipeDirection::Back : WebKit::ViewGestureController::SwipeDirection::Forward;
 }
 
 - (void)startInteractiveTransition:(_UINavigationInteractiveTransitionBase *)transition
@@ -122,12 +124,19 @@ static HashMap<uint64_t, WebKit::ViewGestureController*>& viewGestureControllers
 - (UIPanGestureRecognizer *)gestureRecognizerForInteractiveTransition:(_UINavigationInteractiveTransitionBase *)transition WithTarget:(id)target action:(SEL)action
 {
     UIScreenEdgePanGestureRecognizer *recognizer = [[UIScreenEdgePanGestureRecognizer alloc] initWithTarget:target action:action];
+
+#if __IPHONE_OS_VERSION_MIN_REQUIRED >= 90000
+    bool isLTR = [UIView userInterfaceLayoutDirectionForSemanticContentAttribute:[_gestureRecognizerView.get() semanticContentAttribute]] == UIUserInterfaceLayoutDirectionLeftToRight;
+#else
+    bool isLTR = true;
+#endif
+
     switch ([self directionForTransition:transition]) {
-    case WebKit::ViewGestureController::SwipeDirection::Left:
-        [recognizer setEdges:UIRectEdgeLeft];
+    case WebKit::ViewGestureController::SwipeDirection::Back:
+        [recognizer setEdges:isLTR ? UIRectEdgeLeft : UIRectEdgeRight];
         break;
-    case WebKit::ViewGestureController::SwipeDirection::Right:
-        [recognizer setEdges:UIRectEdgeRight];
+    case WebKit::ViewGestureController::SwipeDirection::Forward:
+        [recognizer setEdges:isLTR ? UIRectEdgeRight : UIRectEdgeLeft];
         break;
     }
     return [recognizer autorelease];
@@ -183,7 +192,7 @@ void ViewGestureController::beginSwipeGesture(_UINavigationInteractiveTransition
     if (m_webPageProxyForBackForwardListForCurrentSwipe != &m_webPageProxy)
         backForwardList.currentItem()->setSnapshot(m_webPageProxy.backForwardList().currentItem()->snapshot());
 
-    RefPtr<WebBackForwardListItem> targetItem = direction == SwipeDirection::Left ? backForwardList.backItem() : backForwardList.forwardItem();
+    RefPtr<WebBackForwardListItem> targetItem = direction == SwipeDirection::Back ? backForwardList.backItem() : backForwardList.forwardItem();
 
     CGRect liveSwipeViewFrame = [m_liveSwipeView frame];
 
@@ -218,7 +227,7 @@ void ViewGestureController::beginSwipeGesture(_UINavigationInteractiveTransition
     RetainPtr<UIViewController> targettedViewController = adoptNS([[UIViewController alloc] init]);
     [targettedViewController setView:m_liveSwipeViewClippingView.get()];
 
-    UINavigationControllerOperation transitionOperation = direction == SwipeDirection::Left ? UINavigationControllerOperationPop : UINavigationControllerOperationPush;
+    UINavigationControllerOperation transitionOperation = direction == SwipeDirection::Back ? UINavigationControllerOperationPop : UINavigationControllerOperationPush;
     RetainPtr<_UINavigationParallaxTransition> animationController = adoptNS([[_UINavigationParallaxTransition alloc] initWithCurrentOperation:transitionOperation]);
 
     m_swipeTransitionContext = adoptNS([[_UIViewControllerOneToOneTransitionContext alloc] init]);
@@ -253,7 +262,7 @@ void ViewGestureController::beginSwipeGesture(_UINavigationInteractiveTransition
 bool ViewGestureController::canSwipeInDirection(SwipeDirection direction)
 {
     auto& backForwardList = m_alternateBackForwardListSourceView.get() ? m_alternateBackForwardListSourceView.get()->_page->backForwardList() : m_webPageProxy.backForwardList();
-    if (direction == SwipeDirection::Left)
+    if (direction == SwipeDirection::Back)
         return !!backForwardList.backItem();
     return !!backForwardList.forwardItem();
 }
